SEOBNR: begin conforming derivative routine notebook to NRPy formatting/module standard.

--- a/in_progress/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -8,51 +8,18 @@
     "\n",
     "## Authors: Zach Etienne & Tyler Knowles\n",
     "\n",
-    "## This module contains a routine for computing an analytic partial derivative of a mathematical expression.\n",
+    "## This module contains a routine for computing an analytic partial derivative of a mathematical expression that is written as seveal subexpressions.\n",
     "\n",
     "**Notebook Status:** <font color='red'><b> In progress </b></font>\n",
     "\n",
-    "**Validation Notes:** The module has been validated by comparing results to finite-difference derivative values in LALSuite.  <font color='red'><b> Add more info later </b></font>\n",
+    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). Additionally, this notebook has been validated by checking that results are consistent with finite-difference derivative values in [LALSuite](https://git.ligo.org/lscsoft/lalsuite).\n",
     "\n",
-    "<a id='intro'></a>\n",
+    "### NRPy+ Source Code for this module: [SEOBNR_Derivative_Routine.py](../../edit/in_progress/SEOBNR/SEOBNR_Derivative_Routine.py)\n",
     "\n",
     "## Introduction\n",
     "$$\\label{intro}$$\n",
     "\n",
-    "Motivated by Mathematica being unable to generate readable partial derivatives of the SEOBNRv3 Hamiltonian, we wrote our own partial derivatve routine."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Partial derivative routine\n",
-    "# Import necessary modules\n",
-    "\n",
-    "import os,sys                    # Standard Python modules for multiplatform OS-level functions\n",
-    "nrpy_dir_path = os.path.join(\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
-    "\n",
-    "from outputC import * #Check what is imported and remove *\n",
-    "import sympy as sp\n",
-    "\n",
-    "bigstring = \"\"\"\n",
-    "sigmaKerr0 = s1x + s2x\n",
-    "sigmaKerr1 = s1y + s2y\n",
-    "sigmaKerr2 = s1z + s2z\n",
-    "quagsire = eta*eta\n",
-    "s1dots1 = s1x*s1x + s1y*s1y + s1z*s1z + quagsire\n",
-    "s2dots2 = s2x*s2x + s2y*s2y + s2z*s2z\n",
-    "r2 = x*x + y*y + z*z\n",
-    "r = sp.sqrt(r2)\n",
-    "u = 1/r\n",
-    "tmppx = px - r\n",
-    "tmppy = py - r\n",
-    "tmppz = pz - r\n",
-    "\"\"\""
+    "This notebook documents the symbolic partial derivative routine used to generate analytic derivatives of the [SEOBNRv3](https://git.ligo.org/lscsoft/lalsuite) Hamiltonian (documented [here](../Tutorial-SEOBNR_Documentation.ipynb)) and described in [this article](https://arxiv.org/abs/1803.06346)."
    ]
   },
   {
@@ -66,6 +33,7 @@
     "\n",
     "This notebook is organized as follows\n",
     "\n",
+    "1. [Step 1](#initializenrpy): Initialize core Python/NRPy+ modules\n",
     "1. [Step 1:](#step1) Split left- and right-hand sides of expressions\n",
     "1. [Step 2:](#step2) Convert left-hand sides to function notation\n",
     "1. [Step 3:](#step3) Produce list of free variables\n",
@@ -76,7 +44,38 @@
     "1. [Step 8:](#step8) Differentiate with respect to a specific free variable\n",
     "1. [Step 9:](#step9) Compute derivatives with respect to each free variable\n",
     "1. [Step 10:](#step10) Output result\n",
-    "1. [Step 11:](#latex_pdf_output) Output this notebook to $\\LaTeX$-formatted PDF file"
+    "1. [Step 11:](#code_validation): Code Validation against `SEOBNR_Derivative_Routine` NRPy+ module\n",
+    "1. [Step 12:](#latex_pdf_output) Output this notebook to $\\LaTeX$-formatted PDF file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='initializenrpy'></a>\n",
+    "\n",
+    "# Step 1: Initialize core Python/NRPy+ modules \\[Back to [top](#toc)\\]\n",
+    "$$\\label{initializenrpy}$$\n",
+    "\n",
+    "Let's start by importing all the needed modules from Python/NRPy+:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1.a: import all needed modules from Python/NRPy+:\n",
+    "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import os, sys                    # Standard Python modules for multiplatform OS-level functions\n",
+    "\n",
+    "# Step 1.?: check system path so can use outputC; #TylerK: remove and put outputC back with other imports\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
+    "from outputC import *             # TylerK: check what is imported and remove *; also find appropriate description"
    ]
   },
   {
@@ -93,20 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[lhrh(lhs='sigmaKerr0', rhs='s1x+s2x'), lhrh(lhs='sigmaKerr1', rhs='s1y+s2y'), lhrh(lhs='sigmaKerr2', rhs='s1z+s2z'), lhrh(lhs='quagsire', rhs='eta*eta'), lhrh(lhs='s1dots1', rhs='s1x*s1x+s1y*s1y+s1z*s1z+quagsire'), lhrh(lhs='s2dots2', rhs='s2x*s2x+s2y*s2y+s2z*s2z'), lhrh(lhs='r2', rhs='x*x+y*y+z*z'), lhrh(lhs='r', rhs='sqrt(r2)'), lhrh(lhs='u', rhs='1/r'), lhrh(lhs='tmppx', rhs='px-r'), lhrh(lhs='tmppy', rhs='py-r'), lhrh(lhs='tmppz', rhs='pz-r')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Step 2.a: Open the expressions\n",
+    "with open('SEOBNR/Hamstring_lite.txt', 'r') as input_expressions:\n",
+    "    all_expressions = input_expressions.read()\n",
+    "\n",
+    "# TylerK: print for debuggin\n",
+    "print(all_expressions)\n",
+    "\n",
     "# Split bigstring by carriage returns:\n",
-    "string_lines = bigstring.splitlines()\n",
+    "string_lines = all_expressions.splitlines()\n",
     "\n",
     "# Create \"lr\" array, which will store each left-hand side and right-hand side as strings.\n",
     "lr = []\n",
@@ -138,17 +136,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[sigmaKerr0(xx), sigmaKerr1(xx), sigmaKerr2(xx), quagsire(xx), s1dots1(xx), s2dots2(xx), r2(xx), r(xx), u(xx), tmppx(xx), tmppy(xx), tmppz(xx)]\n",
-      "[sigmaKerr0, sigmaKerr1, sigmaKerr2, quagsire, s1dots1, s2dots2, r2, r, u, tmppx, tmppy, tmppz]\n",
-      "[s1x + s2x, s1y + s2y, s1z + s2z, eta**2, quagsire + s1x**2 + s1y**2 + s1z**2, s2x**2 + s2y**2 + s2z**2, x**2 + y**2 + z**2, sqrt(r2), 1/r, px - r, py - r, pz - r]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xx = sp.Symbol('xx')\n",
     "func = []\n",
@@ -176,16 +164,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[s1x, s2x, s2y, s1y, s1z, s2z, eta, s1z, s1x, s1y, quagsire, s2y, s2x, s2z, y, z, x, r2, r, px, r, r, py, pz, r]\n",
-      "[s1x, s2x, s2y, s1y, s1z, s2z, eta, quagsire, y, z, x, r2, r, px, py, pz]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Next get a list of all the \"free symbols\" in the RHS expressions.\n",
     "full_symbol_list_with_dups = []\n",
@@ -235,15 +214,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[s1x(xx), s2x(xx), s2y(xx), s1y(xx), s1z(xx), s2z(xx), quagsire(xx), y(xx), z(xx), x(xx), r2(xx), r(xx), px(xx), py(xx), pz(xx)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Remove input constants from symbol list\n",
     "for inputconst in input_constants:\n",
@@ -278,16 +249,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[sigmaKerr0prm, sigmaKerr1prm, sigmaKerr2prm, quagsireprm, s1dots1prm, s2dots2prm, r2prm, rprm, uprm, tmppxprm, tmppyprm, tmppzprm]\n",
-      "[s1xprm + s2xprm, s1yprm + s2yprm, s1zprm + s2zprm, 0, quagsireprm + 2*s1x*s1xprm + 2*s1y*s1yprm + 2*s1z*s1zprm, 2*s2x*s2xprm + 2*s2y*s2yprm + 2*s2z*s2zprm, 2*x*xprm + 2*y*yprm + 2*z*zprm, r2prm/(2*sqrt(r2)), -rprm/r**2, pxprm - rprm, pyprm - rprm, pzprm - rprm]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lhss_deriv = []\n",
     "rhss_deriv = []\n",
@@ -364,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,28 +385,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4]\n",
-      "[0, 1, 2, 3, 4]\n",
-      "[0, 1, 2, 3, 4]\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 9, 10]\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 10]\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "[1, 2, 4, 5, 6, 7, 8, 9, 10]\n",
-      "[0, 2, 4, 5, 6, 7, 8, 9, 10]\n",
-      "[0, 1, 4, 5, 6, 7, 8, 9, 10]\n",
-      "[1, 2, 3, 5, 6, 7, 8, 9, 10]\n",
-      "[0, 2, 3, 5, 6, 7, 8, 9, 10]\n",
-      "[0, 1, 3, 5, 6, 7, 8, 9, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lhss_deriv_x,rhss_deriv_x = deriv_onevar(lhss_deriv,rhss_deriv, xprm=1,yprm=0,zprm=0,pxprm=0,pyprm=0,pzprm=0,\n",
     "                                         s1xprm=0,s1yprm=0,s1zprm=0,s2xprm=0,s2yprm=0,s2zprm=0)\n",
@@ -486,18 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[sigmaKerr0, sigmaKerr1, sigmaKerr2, quagsire, s1dots1, s2dots2, r2, r, u, tmppx, tmppy, tmppz, r2prm, rprm, uprm, tmppxprm, tmppyprm, tmppzprm]\n",
-      "[s1x + s2x, s1y + s2y, s1z + s2z, eta**2, quagsire + s1x**2 + s1y**2 + s1z**2, s2x**2 + s2y**2 + s2z**2, x**2 + y**2 + z**2, sqrt(r2), 1/r, px - r, py - r, pz - r, 2*x, r2prm/(2*sqrt(r2)), -rprm/r**2, -rprm, -rprm, -rprm]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "outstring = \"/* SEOBNR Hamiltonian expression: */\\n\"\n",
     "outstringsp = \"\"\n",
@@ -520,6 +454,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='code_validation'></a>\n",
+    "\n",
+    "# Step 11: Code Validation against `SEOBNR_Derivative_Routine` NRPy+ module \\[Back to [top](#toc)\\]\n",
+    "$$\\label{code_validation}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
     "# Step 11: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
@@ -531,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
