--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -254,11 +254,9 @@
     "P = \\kappa \\rho^\\Gamma.\n",
     "$$\n",
     "\n",
-    "Since the disk is not self-gravitating, we are allowed to choose units such that the disk has maximum density $\\rho_{\\rm max}=1$, so that $\\kappa=P_{\\rm max}$. We will check to make sure this is satisfied, and if not the `FishboneMoncriefID` code will error out, providing in the error message the correct value for $\\kappa = P_{\\rm max}$ that must be set in the parameter file. This is needed as `IllinoisGRMHD` requires that the initial $P$ be given as a polytropic equation of state, with $P_{\\rm cold} = \\kappa (\\rho)^\\Gamma$.\n",
+    "Since the disk is not self-gravitating, we are allowed to rescale the maximum density in the disk to be one in code units; i.e., $\\rho_{\\rm max}=1$. This may be incompatible with the initial choice of polytropic constant $\\kappa$, as rescaling the density results in a rescaling of pressure $P$, as follows.\n",
     "\n",
-    "<!-- We rescale the maximum density in the disk to be one in code units; i.e., $\\rho_{\\rm max}=1$. This may be incompatible with the initial choice of polytropic constant $\\kappa$, as rescaling the density results in a rescaling of pressure $P$, as follows.\n",
-    "\n",
-    "However, when we rescale $\\rho$ so that the maximum density in the disk is one, we make the following transformation:\n",
+    "When we rescale $\\rho$ so that the maximum density in the disk is one, we make the following transformation:\n",
     "$$\n",
     "\\rho \\to \\rho' = \\frac{\\rho}{\\rho_{\\rm max}}.\n",
     "$$\n",
@@ -274,10 +272,9 @@
     "\n",
     "Thus the polytropic equation of state is still valid, but only if \n",
     "$$\n",
-    "\\kappa' = \\kappa \\rho_{\\rm max}^{\\Gamma-1} = \\frac{P_{\\rm max}}{\\rho_{\\rm max}} = P_{\\rm max}.\n",
+    "\\kappa' = \\kappa \\rho_{\\rm max}^{\\Gamma-1} = \\frac{P_{\\rm max}}{\\rho_{\\rm max}}.\n",
     "$$\n",
-    "As e.g., `IllinoisGRMHD` requires that the initial $P'$ be given as a polytropic equation of state, with $P'_{\\rm cold} = \\kappa' (\\rho')^\\Gamma$, $\\kappa'$ must be input into the `FishboneMoncriefID` (and `IllinoisGRMHD`) thorns instead of $\\kappa$. If this does not happen, the code will error out, providing the correct value for $\\kappa'$ that must be set in the parameter file.-->\n",
-    "\n"
+    "As e.g., `IllinoisGRMHD` requires that the initial $P'$ be given as a polytropic equation of state, with $P'_{\\rm cold} = \\kappa' (\\rho')^\\Gamma$, $\\kappa'$ must be input into the `FishboneMoncriefID` (and `IllinoisGRMHD`) thorns instead of $\\kappa$. If this does not happen, the code will error out, providing the correct value for $\\kappa'$ that must be set in the parameter file."
    ]
   },
   {
@@ -321,13 +318,13 @@
     "  //    we error out. If we did not error out, then the value of kappa used in all\n",
     "  //    EOS routines would need to be changed, and generally these appear as\n",
     "  //    read-only parameters.\n",
-    "  if(fabs(1.0 - rho_max) > 1e-8) {\n",
+    "  if(fabs(P_max/rho_max - kappa) > 1e-8) {\n",
     "    printf(\"Error: To ensure that P = kappa*rho^Gamma, where rho_max = 1.0,\\n\");\n",
-    "    printf(\"       you must set (in your parfile) the polytropic constant kappa = P_max = %.15e\\n\\n\",P_max);\n",
+    "    printf(\"       you must set (in your parfile) the polytropic constant kappa = P_max/rho_max = %.15e\\n\\n\",P_max/rho_max);\n",
     "    printf(\" Needed values for kappa, for common values of Gamma:\\n\");\n",
-    "    printf(\" For Gamma =4/3, use kappa=K_initial=K_poly = 4.249572341983121e-03 to ensure rho_max = 1.0\\n\");\n",
-    "    printf(\" For Gamma =5/3, use kappa=K_initial=K_poly = 1.376084754700235e-02 to ensure rho_max = 1.0\\n\");\n",
-    "    printf(\" For Gamma = 2,  use kappa=K_initial=K_poly = 1.699828936823287e-02 to ensure rho_max = 1.0\\n\");\n",
+    "    printf(\" For Gamma =4/3, use kappa=K_initial=K_poly = 4.249572342020724e-03 to ensure rho_max = 1.0\\n\");\n",
+    "    printf(\" For Gamma =5/3, use kappa=K_initial=K_poly = 6.799315747233158e-03 to ensure rho_max = 1.0\\n\");\n",
+    "    printf(\" For Gamma = 2,  use kappa=K_initial=K_poly = 8.499144684041449e-03 to ensure rho_max = 1.0\\n\");\n",
     "    exit(1);\n",
     "  }\n",
     "\n",
