--- a/Tutorial-SEOBNR_v4P_Hamiltonian.ipynb
+++ b/Tutorial-SEOBNR_v4P_Hamiltonian.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "**Validation Notes:** This module has been validated against the LALSuite [SEOBNRv4P code]( https://git.ligo.org/lscsoft/lalsuite.) that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.  That is, the value $H_{\\rm real}$ output from this notebook agrees to roundoff error with the value of $H_{\\rm real}$ computed by the LALSuite function XLALSimIMRSpinPrecEOBHamiltonian().\n",
     "\n",
-    "### NRPy+ Source Code for this module: [SEOBNR_Derivative_Routine.py](../edit/SEOBNR/SEOBNR_v4P_Hamiltonian.py)\n",
+    "### NRPy+ Source Code for this module: [SEOBNR_v4P_Hamiltonian.py](../edit/SEOBNR/SEOBNR_v4P_Hamiltonian.py)\n",
     "\n",
     "<a id='intro'></a>\n",
     "\n",
