GiRaFFEfood_NRPy: Tutorials now error out if the tutorial and module disagree.

--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
@@ -292,13 +292,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
-      "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
-      "AD[0]         - gfho.AD[0]         = 0\n",
-      "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
-      "AD[1]         - gfho.AD[1]         = 0\n",
-      "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
-      "AD[2]         - gfho.AD[2]         = 0\n"
+      "Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module:\n",
+      "ValenciavU0 is in agreement!\n",
+      "AD0 is in agreement!\n",
+      "ValenciavU1 is in agreement!\n",
+      "AD1 is in agreement!\n",
+      "ValenciavU2 is in agreement!\n",
+      "AD2 is in agreement!\n"
      ]
     }
    ],
@@ -306,12 +306,18 @@
     "import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests_fast_wave as gfho\n",
     "gfho.GiRaFFEfood_NRPy_1D_tests_fast_wave()\n",
     "\n",
-    "print(\"Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
+    "def consistency_check(quantity1,quantity2,string):\n",
+    "    if quantity1-quantity2==0:\n",
+    "        print(string+\" is in agreement!\")\n",
+    "    else:\n",
+    "        print(string+\" does not agree!\")\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "print(\"Consistency check between GiRaFFEfood_NRPy tutorial and NRPy+ module:\")\n",
     "\n",
     "for i in range(3):\n",
-    "\n",
-    "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
-    "    print(\"AD[\"+str(i)+\"]         - gfho.AD[\"+str(i)+\"]         = \" + str(AD[i] - gfho.AD[i]))"
+    "    consistency_check(ValenciavU[i],gfho.ValenciavU[i],\"ValenciavU\"+str(i))\n",
+    "    consistency_check(AD[i],gfho.AD[i],\"AD\"+str(i))"
    ]
   },
   {
