latex_parser.py: improved quality of life for tensor support
- changed peek(), accept(), and expect() from private to public
- suppressed various pylint warnings
- modified parse() argument structure to infer tensor name and
dimension from namespace
- added support for rank zero tensor (scalar)
- added error handling for unbalanced equation typing
- improved code organization for tensor support

--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -32,19 +32,20 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "1. [Step 1](#lexparse): Introduction: Lexical Analysis and Syntax Analysis\n",
+    "1. [Step 1](#intro): Introduction: Lexical Analysis and Syntax Analysis\n",
     "1. [Step 2](#sandbox): Demonstration and Sandbox (LaTeX Parser)\n",
-    "1. [Step 3](#latex_pdf_output): $\\LaTeX$ PDF Output"
+    "1. [Step 3](#tensor): Tensor Support with Einstein Notation (WIP)\n",
+    "1. [Step 4](#latex_pdf_output): $\\LaTeX$ PDF Output"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='lexparse'></a>\n",
+    "<a id='intro'></a>\n",
     "\n",
     "# Step 1: Lexical Analysis and Syntax Analysis \\[Back to [top](#toc)\\]\n",
-    "$$\\label{lexparse}$$\n",
+    "$$\\label{intro}$$\n",
     "\n",
     "In the following section, we discuss [lexical analysis](https://en.wikipedia.org/wiki/Lexical_analysis) (lexing) and [syntax analysis](https://en.wikipedia.org/wiki/Parsing) (parsing). In the process of lexical analysis, a lexer will tokenize a character string, called a sentence, using substring pattern matching (or tokenizing). We implemented a regex-based lexer for NRPy+, which does pattern matching using a [regular expression](https://en.wikipedia.org/wiki/Regular_expression) for each token pattern. In the process of syntax analysis, a parser will receive a token iterator from the lexer and build a parse tree containing all syntactic information of the language, as specified by a [formal grammar](https://en.wikipedia.org/wiki/Formal_grammar). We implemented a [recursive descent parser](https://en.wikipedia.org/wiki/Recursive_descent_parser) for NRPy+, which will build a parse tree in [preorder](https://en.wikipedia.org/wiki/Tree_traversal#Pre-order_(NLR)), starting from the root [nonterminal](https://en.wikipedia.org/wiki/Terminal_and_nonterminal_symbols), using a [right recursive](https://en.wikipedia.org/wiki/Left_recursion) grammar. The following right recursive, [context-free grammar](https://en.wikipedia.org/wiki/Context-free_grammar) was written for parsing [LaTeX](https://en.wikipedia.org/wiki/LaTeX), adhering to the canonical (extended) [BNF](https://en.wikipedia.org/wiki/Backus%E2%80%93Naur_form) notation used for describing a context-free grammar:\n",
     "```\n",
@@ -59,8 +60,8 @@
     "<COMMAND>       -> <SQRT> | <FRAC>\n",
     "<SQRT>          -> \\ sqrt [ [<INTEGER>] ] {<EXPR>}\n",
     "<FRAC>          -> \\ frac {<EXPR>} {<EXPR>}\n",
-    "<ARRAY>         -> <TENSOR> ( _( <SYMBOL> | {{ <SYMBOL> }} ) [ ^( <SYMBOL> | {{ <SYMBOL> }} ) ]\n",
-    "                    | ^( <SYMBOL> | {{ <SYMBOL> }} ) [ _( <SYMBOL> | {{ <SYMBOL> }} ) ] )\n",
+    "<ARRAY>         -> <TENSOR> [ _( <SYMBOL> | {{ <SYMBOL> }} ) [ ^( <SYMBOL> | {{ <SYMBOL> }} ) ]\n",
+    "                    | ^( <SYMBOL> | {{ <SYMBOL> }} ) [ _( <SYMBOL> | {{ <SYMBOL> }} ) ] ]\n",
     "```\n",
     "\n",
     "<small>**Source**: Robert W. Sebesta. Concepts of Programming Languages. Pearson Education Limited, 2016.</small>"
@@ -90,7 +91,7 @@
     }
    ],
    "source": [
-    "lexer = Lexer(); lexer.initialize(r'\\sqrt{5}(x + 2/3)^2')\n",
+    "lexer = Lexer(None); lexer.initialize(r'\\sqrt{5}(x + 2/3)^2')\n",
     "print(', '.join(token for token in lexer.tokenize()))"
    ]
   },
@@ -171,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{x: 2**(n/2)*n}\n"
+      "{'x': 2**(n/2)*n}\n"
      ]
     }
    ],
@@ -188,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{x_1: x + 1, x_2: x + 2, x_3: x + 3}\n"
+      "{'x_1': x + 1, 'x_2': x + 2, 'x_3': x + 3}\n"
      ]
     }
    ],
@@ -250,6 +251,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='tensor'></a>\n",
+    "\n",
+    "# Step 3: Tensor Support with Einstein Notation (WIP) \\[Back to [top](#toc)\\]\n",
+    "$$\\label{tensor}$$\n",
+    "\n",
+    "In the following section, we demonstrate the current parser support for tensor notation using the Einstein summation convention. The first example will parse a simple equation for raising an index using the metric tensor, while assuming a 3-dimensional space (i.e. $i$ and $j$ range over $\\{0,1,2\\}$) and $g$ symmetric:\n",
+    "$$v^i=g_{ij}v_j.$$\n",
+    "The second example will parse an equation for a simple tensor contraction, while assuming $h$ and $R$ are symmetric:\n",
+    "$$T=h^{jk}R_{jk}.$$\n",
+    "We should mention that a future build of the parser would require a configuration file be specified before parsing a tensorial equation. The process demonstrated below for declaring a tensor, adding that tensor to a namespace, and passing that namespace to the parser would be eliminated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import indexedexp as ixp  # Import NRPy+ module for indexed expressions\n",
+    "from sympy import symbols # Import SymPy function for declaring symbols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'vU': [gUU00*vD0 + gUU01*vD1 + gUU02*vD2, gUU01*vD0 + gUU11*vD1 + gUU12*vD2, gUU02*vD0 + gUU12*vD1 + gUU22*vD2]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "vD  = ixp.declarerank1('vD', DIM=3)\n",
+    "gUU = ixp.declarerank2('gUU', 'sym01', DIM=3)\n",
+    "namespace = {'vD': vD, 'gUU': gUU}\n",
+    "# The following should be the only user input (in the future) aside from an auto-generated/user-modified configuration.\n",
+    "print(parse(r'v^i = g^{ij}v_j', namespace))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'T': RDD00*hUU00 + 2*RDD01*hUU01 + 2*RDD02*hUU02 + RDD11*hUU11 + 2*RDD12*hUU12 + RDD22*hUU22}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T   = symbols('T', real=True)\n",
+    "hUU = ixp.declarerank2('hUU', 'sym01', DIM=3)\n",
+    "RDD = ixp.declarerank2('RDD', 'sym01', DIM=3)\n",
+    "namespace = {'T': T, 'hUU': hUU, 'RDD': RDD}\n",
+    "# The following should be the only user input (in the future) aside from an auto-generated/user-modified configuration.\n",
+    "parse(r'T = h^{jk}R_{jk}', namespace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
     "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
@@ -261,14 +334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-LaTeX_SymPy_Conversion.tex, and compiled LaTeX file to PDF file Tutorial-LaTeX_SymPy_Conversion.pdf\n"
+      "Created Tutorial-LaTeX_SymPy_Conversion.tex, and compiled LaTeX file to PDF\n",
+      "    file Tutorial-LaTeX_SymPy_Conversion.pdf\n"
      ]
     }
    ],
