Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb: Fix a couple internal links. Thanks to Thiago Assumpcao for pointing these out!

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -25,7 +25,7 @@
     "**Validation Notes:** This module has been validated to converge at the expected order to the exact solution (see [plot](#convergence) at bottom).\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
-    "* [ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py](../edit/ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py) [\\[**tutorial**\\]](Tutorial-ScalarWaveCurvilinear.ipynb) Generates the right-hand side for the Scalar Wave Equation in curvilinear coordinates\n",
+    "* [ScalarWave/ScalarWaveCurvilinear_RHSs.py](../edit/ScalarWave/ScalarWaveCurvilinear_RHSs.py) [\\[**tutorial**\\]](Tutorial-ScalarWaveCurvilinear.ipynb) Generates the right-hand side for the Scalar Wave Equation in curvilinear coordinates\n",
     "* [ScalarWave/InitialData.py](../edit/ScalarWave/InitialData.py) [\\[**tutorial**\\]](Tutorial-ScalarWave.ipynb) Generating C code for either plane wave or spherical Gaussian initial data for the scalar wave equation \n",
     "\n",
     "## Introduction:\n",
@@ -96,7 +96,7 @@
     "\n",
     "Below we generate \n",
     "+ the initial data by calling `InitialData(Type=\"PlaneWave\")` inside the NRPy+ [ScalarWave/InitialData.py](../edit/ScalarWave/InitialData.py) module (documented in [this NRPy+ Jupyter notebook](Tutorial-ScalarWave.ipynb)), and \n",
-    "+ the RHS expressions by calling `ScalarWaveCurvilinear_RHSs()` inside the NRPy+ [ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py](../edit/ScalarWaveCurvilinear/ScalarWaveCurvilinear_RHSs.py) module (documented in [this NRPy+ Jupyter notebook](Tutorial-ScalarWaveCurvilinear.ipynb))."
+    "+ the RHS expressions by calling `ScalarWaveCurvilinear_RHSs()` inside the NRPy+ [ScalarWave/ScalarWaveCurvilinear_RHSs.py](../edit/ScalarWave/ScalarWaveCurvilinear_RHSs.py) module (documented in [this NRPy+ Jupyter notebook](Tutorial-ScalarWaveCurvilinear.ipynb))."
    ]
   },
   {
@@ -108,8 +108,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[lhrh(lhs='*uu_exact', rhs=2 - sin(time*wavespeed - (AMPL*kk0*(exp(xx0/SINHW) - exp(-xx0/SINHW))*sin(xx1)*cos(xx2)/(exp(1/SINHW) - exp(-1/SINHW)) + AMPL*kk1*(exp(xx0/SINHW) - exp(-xx0/SINHW))*sin(xx1)*sin(xx2)/(exp(1/SINHW) - exp(-1/SINHW)) + AMPL*kk2*(exp(xx0/SINHW) - exp(-xx0/SINHW))*cos(xx1)/(exp(1/SINHW) - exp(-1/SINHW)))/sqrt(kk0**2 + kk1**2 + kk2**2))), lhrh(lhs='*vv_exact', rhs=-wavespeed*cos(time*wavespeed - (AMPL*kk0*(exp(xx0/SINHW) - exp(-xx0/SINHW))*sin(xx1)*cos(xx2)/(exp(1/SINHW) - exp(-1/SINHW)) + AMPL*kk1*(exp(xx0/SINHW) - exp(-xx0/SINHW))*sin(xx1)*sin(xx2)/(exp(1/SINHW) - exp(-1/SINHW)) + AMPL*kk2*(exp(xx0/SINHW) - exp(-xx0/SINHW))*cos(xx1)/(exp(1/SINHW) - exp(-1/SINHW)))/sqrt(kk0**2 + kk1**2 + kk2**2)))]\n",
       "Output C function exact_solution_single_point() to file ScalarWaveCurvilinear_Playground_Ccodes/exact_solution_single_point.h\n",
       "Output C function exact_solution_all_points() to file ScalarWaveCurvilinear_Playground_Ccodes/exact_solution_all_points.h\n",
+      "[lhrh(lhs='rhs_gfs[IDX4(UUGF, i0, i1, i2)]', rhs=vv), lhrh(lhs='rhs_gfs[IDX4(VVGF, i0, i1, i2)]', rhs=wavespeed**2*(-uu_dD0*(f0_of_xx0__DD00/f0_of_xx0__D0**3 - 2/(f0_of_xx0*f0_of_xx0__D0)) + uu_dDD00/f0_of_xx0__D0**2 + uu_dDD11/f0_of_xx0**2 + f1_of_xx1__D1*uu_dD1/(f0_of_xx0**2*f1_of_xx1) + uu_dDD22/(f0_of_xx0**2*f1_of_xx1**2)))]\n",
       "Output C function rhs_eval() to file ScalarWaveCurvilinear_Playground_Ccodes/rhs_eval.h\n"
      ]
     }
@@ -671,12 +673,12 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground_Ccodes/output/ScalarWaveCurvilinear_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.8098959922790527 seconds.\n",
+      "(BENCH): Finished executing in 1.0093889236450195 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWaveCurvilinear_Playground 16  8 16`...\n",
-      "(BENCH): Finished executing in 0.20859265327453613 seconds.\n",
+      "(BENCH): Finished executing in 0.20734214782714844 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./ScalarWaveCurvilinear_Playground 24 12 24`...\n",
-      "(BENCH): Finished executing in 0.6090142726898193 seconds.\n"
+      "(BENCH): Finished executing in 0.6066632270812988 seconds.\n"
      ]
     }
    ],
@@ -685,9 +687,9 @@
     "\n",
     "cmd.C_compile(os.path.join(Ccodesdir,\"ScalarWaveCurvilinear_Playground.c\"),\n",
     "              os.path.join(outdir,\"ScalarWaveCurvilinear_Playground\"),compile_mode=\"optimized\")\n",
-    "# !clang -Ofast -fopenmp -mavx2 -mfma ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground -lm\n",
-    "# !icc -align -qopenmp -xHost -O2 -qopt-report=5 -qopt-report-phase ipo -qopt-report-phase vec -vec-threshold1 -qopt-prefetch=4 ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground\n",
-    "# !gcc-7 -Ofast -fopenmp -march=native ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground -lm\n",
+    "# !clang -Ofast -fopenmp -mavx2 -mfma ScalarWave/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground -lm\n",
+    "# !icc -align -qopenmp -xHost -O2 -qopt-report=5 -qopt-report-phase ipo -qopt-report-phase vec -vec-threshold1 -qopt-prefetch=4 ScalarWave/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground\n",
+    "# !gcc-7 -Ofast -fopenmp -march=native ScalarWave/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground -lm\n",
     "\n",
     "# Change to output directory\n",
     "os.chdir(outdir)\n",
